# type-fast

./: Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  handler.rs  main.rs  typer.rs  ui.rs
src/app/pages/: menu.rs  mod.rs  pause.rs  typing.rs
