[package]
name = "tui-type-fast"
version = "0.1.0"
authors = ["Conner Murphy <connermurphy74@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
tokio = { version = "1.39.3", features = ["full"] }
tui-logger = "0.13.1"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
